--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,55 +2,90 @@
   <div class="container">
     <div class="row my-5 py-5 justify-content-center">
       <div class="col-xl-6">
-        <mdb-card>
+        <mdb-card [formGroup]="form">
           <mdb-card-body>
             <mdb-card-title>
               <h4>Heloc Interest Calculator</h4>
             </mdb-card-title>
             <mdb-card-text>
-              <div class="md-form">
-                <input type="number" id="limit" formControlName="limit" class="form-control" min="0" mdbInputDirective>
+              <div class="md-form input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">$</span>
+                </div>
+                <input type="number" id="limit" formControlName="limit" class="form-control" min="0" mdbInputDirective
+                  aria-label="Amount (to the nearest dollar)">
                 <label for="limit">Heloc Limit</label>
+                <div class="input-group-append">
+                  <span class="input-group-text">.00</span>
+                </div>
               </div>
 
-              <div class="md-form">
-                <input type="number" id="minPaymentRate" formControlName="minPaymentRate" class="form-control" min="0" mdbInputDirective>
+              <div class="md-form input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">%</span>
+                </div>
+                <input type="number" id="minPaymentRate" formControlName="minPaymentRate" class="form-control" min="0"
+                  mdbInputDirective>
                 <label for="minPaymentRate">Min Payment Rate</label>
               </div>
 
-              <div class="md-form">
-                <input type="number" id="minPayment" formControlName="minPayment" class="form-control" min="0" mdbInputDirective>
+              <div class="md-form input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">$</span>
+                </div>
+                <input type="number" id="minPayment" formControlName="minPayment" class="form-control" min="0"
+                  mdbInputDirective>
                 <label for="minPayment">Min Payment</label>
               </div>
 
-              <div class="md-form">
+              <div class="md-form input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">%</span>
+                </div>
                 <input type="number" id="apr" formControlName="apr" class="form-control" min="0" mdbInputDirective>
                 <label for="apr">APR</label>
               </div>
 
               <div class="md-form">
-                <input type="number" id="dailyInterestRate" formControlName="dailyInterestRate" class="form-control" min="0" disabled mdbInputDirective>
+                <input type="number" id="dailyInterestRate" formControlName="dailyInterestRate" class="form-control"
+                  min="0" mdbInputDirective>
                 <label for="dailyInterestRate" class="disabled">Daily Interest Rate</label>
               </div>
 
+              <div class="md-form input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">$</span>
+                </div>
+                <input type="number" id="monthlyBalance" formControlName="monthlyBalance" class="form-control" min="0"
+                  mdbInputDirective>
+                <label for="monthlyBalance">Min Payment</label>
+              </div>
+
               <div class="md-form">
-                <input type="number" id="daysInMonth" formControlName="daysInMonth" class="form-control" min="0" mdbInputDirective>
+                <input type="number" id="daysInMonth" formControlName="daysInMonth" class="form-control" min="28" max="31"
+                  mdbInputDirective>
                 <label for="daysInMonth">Days in Month</label>
               </div>
-
-              <div class="md-form">
-                <input type="number" id="monthlyInterestCharge" formControlName="monthlyInterestCharge" class="form-control" min="0" disabled mdbInputDirective>
-                <label for="monthlyInterestCharge" class="disabled">Monthly Interest Charge</label>
-              </div>
-
-              <div class="md-form">
-                <input type="number" id="monthlyPrincipalPayment" formControlName="monthlyPrincipalPayment" class="form-control" min="0" disabled mdbInputDirective>
-                <label for="monthlyPrincipalPayment" class="disabled">Monthly Principal Payment</label>
-              </div>
-
             </mdb-card-text>
             <div class="flex-row">
               <button mdbBtn color="primary" class="waves-light" mdbWavesEffect (click)="calculate()">Calculate</button>
+            </div>
+            <div class="md-form input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">$</span>
+              </div>
+              <input type="text" id="monthlyInterestCharge" formControlName="monthlyInterestCharge" class="form-control"
+                mdbInputDirective>
+              <label for="monthlyInterestCharge" class="disabled">Monthly Interest Charge</label>
+            </div>
+
+            <div class="md-form input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">$</span>
+              </div>
+              <input type="text" id="monthlyPrincipalPayment" formControlName="monthlyPrincipalPayment" class="form-control"
+                mdbInputDirective>
+              <label for="monthlyPrincipalPayment" class="disabled">Monthly Principal Payment</label>
             </div>
           </mdb-card-body>
         </mdb-card>
