Implemented onChange event handler.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -58,7 +58,7 @@
                 </div>
                 <input type="number" id="monthlyBalance" formControlName="monthlyBalance" class="form-control" min="0"
                   mdbInputDirective>
-                <label for="monthlyBalance">Min Payment</label>
+                <label for="monthlyBalance">Monthly Balance</label>
               </div>
 
               <div class="md-form">
