--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
                   <span class="input-group-text">$</span>
                 </div>
                 <input type="number" id="limit" formControlName="limit" class="form-control" min="0" mdbInputDirective
-                  aria-label="Amount (to the nearest dollar)">
+                  aria-label="Amount (to the nearest dollar)" data-error="*" [validateSuccess]="false">
                 <label for="limit">Heloc Limit</label>
                 <div class="input-group-append">
                   <span class="input-group-text">.00</span>
@@ -24,8 +24,8 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text">%</span>
                 </div>
-                <input type="number" id="minPaymentRate" formControlName="minPaymentRate" class="form-control" min="0"
-                  mdbInputDirective>
+                <input type="number" id="minPaymentRate" formControlName="minPaymentRate" class="form-control" min="0" mdbInputDirective
+                  data-error="*" [validateSuccess]="false">
                 <label for="minPaymentRate">Min Payment Rate</label>
               </div>
 
@@ -33,8 +33,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text">$</span>
                 </div>
-                <input type="number" id="minPayment" formControlName="minPayment" class="form-control" min="0"
-                  mdbInputDirective>
+                <input type="number" id="minPayment" formControlName="minPayment" class="form-control" min="0" mdbInputDirective>
                 <label for="minPayment">Min Payment</label>
               </div>
 
@@ -42,13 +41,13 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text">%</span>
                 </div>
-                <input type="number" id="apr" formControlName="apr" class="form-control" min="0" mdbInputDirective>
+                <input type="number" id="apr" formControlName="apr" class="form-control" min="0" mdbInputDirective
+                  data-error="*" [validateSuccess]="false">
                 <label for="apr">APR</label>
               </div>
 
               <div class="md-form">
-                <input type="number" id="dailyInterestRate" formControlName="dailyInterestRate" class="form-control"
-                  min="0" mdbInputDirective>
+                <input type="number" id="dailyInterestRate" formControlName="dailyInterestRate" class="form-control" min="0" mdbInputDirective>
                 <label for="dailyInterestRate" class="disabled">Daily Interest Rate</label>
               </div>
 
@@ -56,20 +55,21 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text">$</span>
                 </div>
-                <input type="number" id="monthlyBalance" formControlName="monthlyBalance" class="form-control" min="0"
-                  mdbInputDirective>
+                <input type="number" id="monthlyBalance" formControlName="monthlyBalance" class="form-control" min="0" mdbInputDirective
+                  data-error="*" [validateSuccess]="false">
                 <label for="monthlyBalance">Monthly Balance</label>
               </div>
 
               <div class="md-form">
-                <input type="number" id="daysInMonth" formControlName="daysInMonth" class="form-control" min="28" max="31"
-                  mdbInputDirective>
+                <input type="number" id="daysInMonth" formControlName="daysInMonth" class="form-control" min="28" max="31" mdbInputDirective
+                  data-error="*" [validateSuccess]="false">
                 <label for="daysInMonth">Days in Month</label>
               </div>
             </mdb-card-text>
 
             <div class="flex-row">
               <button mdbBtn [disabled]="form.invalid" color="primary" class="waves-light" mdbWavesEffect (click)="calculate()">Calculate</button>
+              <button mdbBtn color="primary" class="waves-light" mdbWavesEffect (click)="reset()">Reset</button>
             </div>
 
             <div class="md-form input-group">
