Updated footer and days in month validation.

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,3 @@
 <footer class="footer-copyright pink py-3 text-center text-white">
-  © 2018 Copyright:
-  <a class="text-white" href="http://bremp.com"> bremp </a>
+  <a class="text-white" href="http://bremp.com"> bremp </a> © 2018
 </footer>
